# cosmwasm-academy

./: .gitignore  Cargo.toml
.cargo/: config
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
src/multitest/: mod.rs  tests.rs
