[package]
name = "counting-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib] 
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.2"
cw-storage-plus = "1"
serde = "1.0"
thiserror = "1.0"

[dev-dependencies]
cw-multi-test = "0.16"