[package]
name = "counting-contract"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib] 
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-std = "1.2"
cosmwasm-schema = "1.2"
cw-storage-plus = "1"
serde = "1.0"
schemars = "0.8"
thiserror = "1.0"
cw-multi-test = { version = "0.16", optional = true }
cw2 = "1.0"

[dev-dependencies]
cw-multi-test = "0.16"
counting-contract_0_1 = { path = "../cosmwasm-academy", package = "counting-contract", features = ["tests"]  }
